Messed with index

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   </script>
 
   <script type="text/x-handlebars" id="drink">
-    Drink Name: {{drinkName}}
+    <h4>Drink Name: {{drinkName}}</h4>
+    <p>{{description}}</p>
   </script>
 
   <!-- JSville -->
